name:                caret
version:             0.1.0.0
synopsis:            Classification and REgression Training
description:         Please see README.md
homepage:            https://github.com/BeautifulDestinations/caret
license:             MIT
license-file:        LICENSE
author:              Tom Nielsen
maintainer:          tomn@beautifuldestinations.com
copyright:           2016 Beautiful Destinations Ltd
category:            Statistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Caret
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , hmatrix
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , caret
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BeautifulDestinations/caret
